Fix jumping navbar and animations

--- a/assets/css/_navbar.scss
+++ b/assets/css/_navbar.scss
@@ -3,6 +3,10 @@
   padding-right: 60px;
   height: 70px;
   background: $bgColor;
+  &-container {
+    height: 70px;
+  }
+
   .navbar-nav {
     min-width: 515px;
     width: 40%;
